--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.2.6",
   "private": false,
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.6.0",
   "scripts": {
     "prepare": "simple-git-hooks",
     "dev": "next dev",
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@antv/g2": "^5.2.2",
-    "@codesandbox/sandpack-react": "^2.18.1",
+    "@codesandbox/sandpack-react": "^2.18.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -24,7 +24,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/themes": "^3.1.1",
-    "@rc-component/color-picker": "^1.9.0",
+    "@rc-component/color-picker": "^2.0.0",
     "@react-spring/web": "^9.7.4",
     "@stackblitz/sdk": "^1.11.0",
     "@types/youtube-player": "^5.5.11",
@@ -48,9 +48,9 @@
     "@univerjs/engine-render": "0.2.6",
     "@univerjs/facade": "0.2.6",
     "@univerjs/find-replace": "0.2.6",
-    "@univerjs/icons": "^0.1.70",
+    "@univerjs/icons": "^0.1.72",
     "@univerjs/network": "0.2.6",
-    "@univerjs/protocol": "0.1.37",
+    "@univerjs/protocol": "0.1.38",
     "@univerjs/rpc": "0.2.6",
     "@univerjs/sheets": "0.2.6",
     "@univerjs/sheets-conditional-formatting": "0.2.6",
@@ -76,7 +76,7 @@
     "@univerjs/uniscript": "0.2.6",
     "@visactor/univer-vchart-plugin": "^2.0.0",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
+    "dayjs": "^1.11.12",
     "monaco-editor": "^0.50.0",
     "next": "14.2.5",
     "nextra": "^2.13.4",
@@ -93,19 +93,19 @@
     "youtube-player": "^5.6.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.23.2",
-    "@eslint-react/eslint-plugin": "^1.5.30",
-    "@types/node": "^20.14.12",
+    "@antfu/eslint-config": "^2.24.1",
+    "@eslint-react/eslint-plugin": "^1.8.2",
+    "@types/node": "^22.1.0",
     "@types/pako": "^2.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@univerjs/webpack-plugin": "0.5.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "9.7.0",
-    "eslint-plugin-react-hooks": "5.1.0-rc-107a2f8c3e-20240617",
+    "autoprefixer": "^10.4.20",
+    "eslint": "9.8.0",
+    "eslint-plugin-react-hooks": "5.1.0-rc-8269d55d-20240802",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "eslint-plugin-readable-tailwind": "^1.5.2",
-    "lint-staged": "^15.2.7",
+    "eslint-plugin-readable-tailwind": "^1.5.3",
+    "lint-staged": "^15.2.8",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "postcss": "^8.4.40",
     "raw-loader": "^4.0.2",
